--- a/gradle.properties
+++ b/gradle.properties
@@ -4,17 +4,18 @@ org.gradle.daemon=false
 mod_id=ftbchunks
 archives_base_name=ftb-chunks
 maven_group=dev.ftb.mods
-mod_version=1902.3.22
+mod_version=2000.1.1
 mod_author=FTB Team
-minecraft_version=1.19.2
-forge_version=43.2.8
-architectury_version=6.5.77
-fabric_loader_version=0.14.9
-fabric_api_version=0.60.0+1.19.2
+minecraft_version=1.20
+forge_version=46.0.14
+architectury_version=9.0.8
+fabric_loader_version=0.14.21
+fabric_api_version=0.83.0+1.20
 
-ftb_library_version=1902.3.17-build.200
-ftb_teams_version=1902.2.12-build.91
-ftb_ranks_version=1902.1.12-build.50
+ftb_library_version=2000.1.1-build.218-SNAPSHOT
+#ftb_library_version=2000.1.1-build.9999
+ftb_teams_version=2000.1.1-build.110
+ftb_ranks_version=2000.1.1-build.86
 kubejs_version=1902.6.0-build.119
 rhino_version=1902.2.2-build.264
 ingredient_extension_api_version=2.0.9
@@ -24,9 +25,9 @@ curseforge_id_fabric=472657
 curseforge_type=release
 
 # Compat
-waystones_forge_version=3901921
-waystones_fabric_version=3901920
-balm_forge_version=3914527
-balm_fabric_version=3913965
+waystones_forge_version=4584510
+waystones_fabric_version=4584500
+balm_forge_version=4584620
+balm_fabric_version=4584618
 gamestages_version=11.0.2
 common_prot_api_version=1.0.0
