--- a/gradle.properties
+++ b/gradle.properties
@@ -4,18 +4,18 @@ org.gradle.daemon=false
 mod_id=ftbchunks
 archives_base_name=ftb-chunks
 maven_group=dev.ftb.mods
-mod_version=2000.1.1
+mod_version=2001.1.1
 mod_author=FTB Team
-minecraft_version=1.20
-forge_version=46.0.14
+minecraft_version=1.20.1
+forge_version=47.0.1
 architectury_version=9.0.8
 fabric_loader_version=0.14.21
-fabric_api_version=0.83.0+1.20
+fabric_api_version=0.83.1+1.20.1
 
-ftb_library_version=2000.1.1-build.218-SNAPSHOT
+ftb_library_version=2001.1.1-build.219-SNAPSHOT
 #ftb_library_version=2000.1.1-build.9999
-ftb_teams_version=2000.1.1-build.110
-ftb_ranks_version=2000.1.1-build.86
+ftb_teams_version=2001.1.1-build.113-SNAPSHOT
+ftb_ranks_version=2001.1.2-build.89-SNAPSHOT
 kubejs_version=1902.6.0-build.119
 rhino_version=1902.2.2-build.264
 ingredient_extension_api_version=2.0.9
