chore: updated to 1.20.1

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ allprojects {
 	group = project.maven_group
 	archivesBaseName = project.archives_base_name
 
+	// needs to be done AFTER version is set
+	apply from: "https://raw.githubusercontent.com/FTBTeam/mods-meta/main/gradle/publishing.gradle"
+
 	sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = 17
 
 	compileJava {
