--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -45,7 +45,12 @@ repositories {
 			includeGroup "com.faux.ingredientextension"
 		}
 	}
-	maven { url "https://maven.nucleoid.xyz/" }
+	maven {
+		url "https://maven.nucleoid.xyz/"
+		content {
+			includeGroup "eu.pb4"
+		}
+	}
 }
 
 dependencies {
@@ -142,29 +147,30 @@ if (ENV.CURSEFORGE_KEY) {
 
 publishing {
 	publications {
-		mavenFabric(MavenPublication) {
+		mavenForge(MavenPublication) {
 			artifactId = "${rootProject.archives_base_name}-${project.name}"
+			version ftbPublishing.mavenVersion
 			from components.java
 		}
 	}
 
 	repositories {
-		if (ENV.FTB_MAVEN_TOKEN) {
+		if (ftbPublishing.ftbToken) {
 			maven {
-				url "https://maven.ftb.dev/release"
+				url ftbPublishing.ftbURL
 				credentials {
-					username = "ftb"
-					password = "${ENV.FTB_MAVEN_TOKEN}"
+					username = ftbPublishing.ftbUser
+					password = ftbPublishing.ftbToken
 				}
 			}
 		}
 
-		if (ENV.SAPS_TOKEN) {
+		if (ftbPublishing.sapsToken) {
 			maven {
-				url "https://maven.saps.dev/minecraft"
+				url ftbPublishing.sapsURL
 				credentials {
-					username = "ftb"
-					password = "${ENV.SAPS_TOKEN}"
+					username = ftbPublishing.sapsUser
+					password = ftbPublishing.sapsToken
 				}
 			}
 		}
