--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,13 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
+
 # Mod
 mod_id=ftbchunks
 archives_base_name=ftb-chunks
 maven_group=dev.ftb.mods
 mod_version=2001.1.1
 mod_author=FTB Team
+
 minecraft_version=1.20.1
 forge_version=47.0.1
 architectury_version=9.0.8
@@ -15,13 +17,6 @@ fabric_api_version=0.83.1+1.20.1
 ftb_library_version=2001.1.1-build.220-SNAPSHOT
 ftb_teams_version=2001.1.1-build.113-SNAPSHOT
 ftb_ranks_version=2001.1.2-build.89-SNAPSHOT
-kubejs_version=1902.6.0-build.119
-rhino_version=1902.2.2-build.264
-ingredient_extension_api_version=2.0.9
-
-curseforge_id_forge=314906
-curseforge_id_fabric=472657
-curseforge_type=release
 
 # Compat
 waystones_forge_version=4584510
@@ -30,3 +25,11 @@ balm_forge_version=4584620
 balm_fabric_version=4584618
 gamestages_version=11.0.2
 common_prot_api_version=1.0.0
+kubejs_version=1902.6.0-build.119
+rhino_version=1902.2.2-build.264
+ingredient_extension_api_version=2.0.9
+
+curseforge_id_forge=314906
+curseforge_id_fabric=472657
+curseforge_type=alpha
+
