--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -128,10 +128,10 @@ if (ENV.CURSEFORGE_KEY) {
 		apiKey = ENV.CURSEFORGE_KEY
 		project {
 			id = project.curseforge_id_fabric
-			releaseType = project.curseforge_type
+			releaseType = ftbPublishing.relType
 			addGameVersion "Fabric"
-			addGameVersion rootProject.minecraft_version
-			mainArtifact(remapJar.archivePath)
+			addGameVersion project.minecraft_version
+			mainArtifact(remapJar.archiveFile)
 			relations {
 				requiredDependency 'architectury-api'
 				requiredDependency 'fabric-api'
@@ -139,7 +139,7 @@ if (ENV.CURSEFORGE_KEY) {
 				requiredDependency 'ftb-teams-fabric'
 				optionalDependency 'ftb-ranks-fabric'
 			}
-			changelog = getGitChangelog
+			changelog = ENV.CHANGELOG  // expected to exist if ENV.CURSEFORGE_KEY does
 			changelogType = 'markdown'
 		}
 	}
