--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -90,9 +90,9 @@ processResources {
 				"forgeversion": project.forge_version,
 				"forgeshortversion": project.forge_version.split("\\.")[0],
 				"mcversion": project.minecraft_version,
-				"libraryversion": project.ftb_library_version,
-				"teamsversion": project.ftb_teams_version,
-				"ranksversion": project.ftb_ranks_version,
+				"ftblibraryversion": project.ftb_library_version,
+				"ftbteamsversion": project.ftb_teams_version,
+				"ftbranksversion": project.ftb_ranks_version,
 				"kubejsversion": project.kubejs_version
 	}
 }
