--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.daemon=false
 mod_id=ftbchunks
 archives_base_name=ftb-chunks
 maven_group=dev.ftb.mods
-mod_version=2001.1.1
+mod_version=2001.1.2
 mod_author=FTB Team
 
 minecraft_version=1.20.1
@@ -14,9 +14,9 @@ architectury_version=9.0.8
 fabric_loader_version=0.14.21
 fabric_api_version=0.83.1+1.20.1
 
-ftb_library_version=2001.1.1-build.220-SNAPSHOT
-ftb_teams_version=2001.1.1-build.113-SNAPSHOT
-ftb_ranks_version=2001.1.2-build.89-SNAPSHOT
+ftb_library_version=2001.1.2
+ftb_teams_version=2001.1.2
+ftb_ranks_version=2001.1.3
 
 # Compat
 waystones_forge_version=4584510
