--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -146,7 +146,7 @@ publishing {
 	repositories {
 		if (ENV.FTB_MAVEN_TOKEN) {
 			maven {
-				url "https://maven.ftb.dev/release"
+				url "https://maven.ftb.dev/releases"
 				credentials {
 					username = "ftb"
 					password = "${ENV.FTB_MAVEN_TOKEN}"
@@ -156,7 +156,7 @@ publishing {
 
 		if (ENV.SAPS_TOKEN) {
 			maven {
-				url "https://maven.saps.dev/minecraft"
+				url "https://maven.saps.dev/releases"
 				credentials {
 					username = "ftb"
 					password = "${ENV.SAPS_TOKEN}"
