build: bump ftb library dep version

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ architectury_version=9.0.8
 fabric_loader_version=0.14.21
 fabric_api_version=0.83.1+1.20.1
 
-ftb_library_version=2001.1.3-SNAPSHOT
+ftb_library_version=2001.1.3
 ftb_teams_version=2001.1.4
 
 curseforge_id_forge=314906
