--- a/gradle.properties
+++ b/gradle.properties
@@ -5,17 +5,20 @@ org.gradle.daemon=false
 mod_id=ftbchunks
 archives_base_name=ftb-chunks
 maven_group=dev.ftb.mods
-mod_version=2001.2.3
+mod_version=2002.2.0
 mod_author=FTB Team
 
-minecraft_version=1.20.1
-forge_version=47.1.3
-architectury_version=9.0.8
-fabric_loader_version=0.14.21
-fabric_api_version=0.83.1+1.20.1
+minecraft_version=1.20.2
 
-ftb_library_version=2001.1.3
-ftb_teams_version=2001.1.4
+# Deps
+forge_version=48.0.37
+neoforge_version=20.2.51-beta
+fabric_loader_version=0.14.24
+fabric_api_version=0.90.7+1.20.2
+architectury_version=10.0.8
+
+ftb_library_version=2002.1.0-SNAPSHOT
+ftb_teams_version=2002.1.0-SNAPSHOT
 
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
