chore: ported to 1.20.4, neoforge subproject added

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -9,7 +9,7 @@ dependencies {
 def ENV = System.getenv()
 
 architectury {
-	common("forge", "fabric")
+	common("forge", "fabric", "neoforge")
 }
 
 configurations {
