--- a/gradle.properties
+++ b/gradle.properties
@@ -5,20 +5,21 @@ org.gradle.daemon=false
 mod_id=ftbchunks
 archives_base_name=ftb-chunks
 maven_group=dev.ftb.mods
-mod_version=2002.1.0
+mod_version=2004.1.0
 mod_author=FTB Team
 
-minecraft_version=1.20.2
+minecraft_version=1.20.4
 
 # Deps
-forge_version=48.0.37
-neoforge_version=20.2.51-beta
-fabric_loader_version=0.14.24
-fabric_api_version=0.90.7+1.20.2
-architectury_version=10.0.9
+forge_version=49.0.3
+neoforge_version=20.4.20-beta
+neoforge_loader_version=1
+fabric_loader_version=0.15.1
+fabric_api_version=0.91.2+1.20.4
+architectury_version=11.0.8
 
-ftb_library_version=2002.1.0-SNAPSHOT
-ftb_teams_version=2002.1.0-SNAPSHOT
+ftb_library_version=2004.1.1-SNAPSHOT
+ftb_teams_version=2004.1.0-SNAPSHOT
 
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
