--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,6 @@ pluginManagement {
 	}
 }
 
-include "common", "fabric", "forge"
+include "common", "fabric", "forge", "neoforge"
 
-rootProject.name = 'FTB-Chunks-1.20.2'
+rootProject.name = 'FTB-Chunks-1.20.4'
