--- a/gradle.properties
+++ b/gradle.properties
@@ -5,21 +5,21 @@ org.gradle.daemon=false
 mod_id=ftbchunks
 archives_base_name=ftb-chunks
 maven_group=dev.ftb.mods
-mod_version=2004.1.1
+mod_version=2004.1.2
 mod_author=FTB Team
 
 minecraft_version=1.20.4
 
 # Deps
-forge_version=49.0.3
-neoforge_version=20.4.46-beta
+forge_version=49.0.31
+neoforge_version=20.4.196
 neoforge_loader_version=1
-fabric_loader_version=0.15.1
-fabric_api_version=0.91.2+1.20.4
-architectury_version=11.0.9
+fabric_loader_version=0.15.7
+fabric_api_version=0.96.4+1.20.4
+architectury_version=11.1.13
 
 ftb_library_version=2004.1.3-SNAPSHOT
-ftb_teams_version=2004.1.1-SNAPSHOT
+ftb_teams_version=2004.1.2-SNAPSHOT
 
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
