--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -38,7 +38,7 @@ side = "BOTH"
 [[dependencies.ftbchunks]]
 modId = "ftblibrary"
 mandatory = true
-versionRange = "[${ftblibraryversion},)"
+versionRange = "[${ftblibraryversion},2001.2.0)"
 ordering = "AFTER"
 side = "BOTH"
 
