build: updated to non-snapshot versions of teams & lib

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,8 +18,8 @@ fabric_loader_version=0.15.7
 fabric_api_version=0.96.4+1.20.4
 architectury_version=11.1.17
 
-ftb_library_version=2004.2.0-SNAPSHOT
-ftb_teams_version=2004.1.2-SNAPSHOT
+ftb_library_version=2004.2.0
+ftb_teams_version=2004.1.2
 
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
