--- a/gradle.properties
+++ b/gradle.properties
@@ -9,13 +9,13 @@ mod_version=2001.3.0
 mod_author=FTB Team
 
 minecraft_version=1.20.1
-forge_version=47.1.3
+forge_version=47.1.47
 architectury_version=9.1.12
 fabric_loader_version=0.14.21
 fabric_api_version=0.83.1+1.20.1
 
 ftb_library_version=2001.2.0-SNAPSHOT
-ftb_teams_version=2001.1.4
+ftb_teams_version=2001.3.0-SNAPSHOT
 
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
