build: switch to non-snapshot builds of lib/teams
changelog updated

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,8 +14,8 @@ architectury_version=9.1.12
 fabric_loader_version=0.14.21
 fabric_api_version=0.83.1+1.20.1
 
-ftb_library_version=2001.2.0-SNAPSHOT
-ftb_teams_version=2001.3.0-SNAPSHOT
+ftb_library_version=2001.2.0
+ftb_teams_version=2001.3.0
 
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
