chore: ported to 1.20.6

--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -48,7 +48,7 @@ dependencies {
 apply from: "https://raw.githubusercontent.com/FTBTeam/mods-meta/main/gradle/extra-local-mods.gradle"
 
 processResources {
-	def file = new File("./build/resources/main/META-INF/mods.toml")
+	def file = new File("./build/resources/main/META-INF/neoforge.mods.toml")
 	if (file.exists()) {
 		file.delete()
 	}
@@ -56,7 +56,7 @@ processResources {
 	exclude '.cache'
 	inputs.property "version", project.version
 
-	filesMatching("META-INF/mods.toml") {
+	filesMatching("META-INF/neoforge.mods.toml") {
 		expand "version": project.version,
 				"archversion": project.architectury_version,
 				"neoforgeversion": project.neoforge_version,
