--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ subprojects {
 		minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
 		mappings loom.officialMojangMappings()
 	}
+
+	configurations.configureEach {
+		resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+	}
 }
 
 allprojects {
