--- a/gradle.properties
+++ b/gradle.properties
@@ -12,14 +12,14 @@ minecraft_version=1.20.6
 
 # Deps
 forge_version=50.0.9
-neoforge_version=20.6.72-beta
+neoforge_version=20.6.100-beta
 neoforge_loader_version=1
 fabric_loader_version=0.15.10
 fabric_api_version=0.99.0+1.20.6
-architectury_version=12.1.2
+architectury_version=12.1.3
 
-ftb_library_version=2006.1.0-SNAPSHOT
-ftb_teams_version=2006.1.0-SNAPSHOT
+ftb_library_version=2006.1.1
+ftb_teams_version=2006.1.0
 
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
