build: updated build toolchain to fix mixin remap issues
https://github.com/FTBTeam/FTB-Mods-Issues/issues/1214

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -77,9 +77,13 @@ processResources {
 	}
 }
 
+sourcesJar {
+	dependsOn copyAccessWidener
+}
+
 shadowJar {
 	configurations = [project.configurations.shadowCommon]
-	classifier "dev-shadow"
+	setArchiveClassifier("dev-shadow")
 }
 
 remapJar {
@@ -90,7 +94,7 @@ remapJar {
 }
 
 jar {
-	classifier "dev"
+	setArchiveClassifier("dev")
 }
 
 components.java {
