--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -75,20 +75,24 @@ processResources {
 	}
 }
 
+sourcesJar {
+	dependsOn copyAccessWidener
+}
+
 shadowJar {
 	configurations = [project.configurations.shadowCommon]
-	classifier "dev-shadow"
+	setArchiveClassifier "dev-shadow"
 }
 
 remapJar {
 	input.set shadowJar.archiveFile
 	dependsOn shadowJar
 	archiveBaseName.set "${rootProject.archives_base_name}-${project.name}"
-	archiveClassifier.set null
+	setArchiveClassifier null
 }
 
 jar {
-	classifier "dev"
+	setArchiveClassifier "dev"
 }
 
 components.java {
