--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -83,14 +83,14 @@ shadowJar {
 	exclude "fabric.mod.json"
 
 	configurations = [project.configurations.shadowCommon]
-	classifier "dev-shadow"
+	setArchiveClassifier "dev-shadow"
 }
 
 remapJar {
 	input.set shadowJar.archiveFile
 	dependsOn shadowJar
 	archiveBaseName.set "${rootProject.archives_base_name}-${project.name}"
-	archiveClassifier.set null
+	setArchiveClassifier null
 }
 
 jar {
@@ -106,7 +106,7 @@ jar {
 		])
 	}
 
-	classifier "dev"
+	setArchiveClassifier "dev"
 }
 
 components.java {
