feat: port to 1.21 & migrate to mpp

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,12 +1,10 @@
 dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
-	modApi "dev.architectury:architectury:${rootProject.architectury_version}"
+	modApi "dev.architectury:architectury:${rootProject.architectury_api_version}"
 
 	modImplementation("dev.ftb.mods:ftb-library:${rootProject.ftb_library_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-teams:${rootProject.ftb_teams_version}") { transitive = false }
 }
-
-def ENV = System.getenv()
 
 architectury {
 	common(/* "forge", */ "fabric", "neoforge")
@@ -32,35 +30,4 @@ publishing {
 			from components.java
 		}
 	}
-
-	repositories {
-		if (ftbPublishing.ftbToken) {
-			maven {
-				url ftbPublishing.ftbURL
-				credentials {
-					username = ftbPublishing.ftbUser
-					password = ftbPublishing.ftbToken
-				}
-			}
-		}
-
-		if (ftbPublishing.sapsToken) {
-			maven {
-				url ftbPublishing.sapsURL
-				credentials {
-					username = ftbPublishing.sapsUser
-					password = ftbPublishing.sapsToken
-				}
-			}
-		}
-	}
 }
-
-// TODO: ask @maxneedssnacks
-//afterEvaluate {
-//	tasks {
-//		remapJar {
-//			remapAccessWidener = false
-//		}
-//	}
-//}
