--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,9 +1,6 @@
 plugins {
 	id "com.github.johnrengelman.shadow" version "7.0.0"
-	id "com.matthewprenger.cursegradle" version "1.4.0"
 }
-
-def ENV = System.getenv()
 
 architectury {
 	platformSetupLoomIde()
@@ -56,7 +53,7 @@ artifacts {
 dependencies {
 	modApi "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
 	modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
-	modApi "dev.architectury:architectury-fabric:${rootProject.architectury_version}"
+	modApi "dev.architectury:architectury-fabric:${rootProject.architectury_api_version}"
 
 	modImplementation("dev.ftb.mods:ftb-library-fabric:${rootProject.ftb_library_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-teams-fabric:${rootProject.ftb_teams_version}") { transitive = false }
@@ -79,7 +76,7 @@ processResources {
 
 	filesMatching("fabric.mod.json") {
 		expand "version": project.version,
-				"archversion": project.architectury_version,
+				"archversion": project.architectury_api_version,
 				"fabricapiversion": project.fabric_api_version,
 				"mcversion": project.minecraft_version,
 				"ftblibraryversion": project.ftb_library_version,
@@ -113,28 +110,6 @@ components.java {
 	}
 }
 
-if (ENV.CURSEFORGE_KEY) {
-	curseforge {
-		apiKey = ENV.CURSEFORGE_KEY
-		project {
-			id = project.curseforge_id_fabric
-			releaseType = ftbPublishing.relType
-			addGameVersion "Fabric"
-			addGameVersion project.minecraft_version
-			mainArtifact(remapJar.archiveFile)
-			relations {
-				requiredDependency 'architectury-api'
-				requiredDependency 'fabric-api'
-				requiredDependency 'ftb-library-fabric'
-				requiredDependency 'ftb-teams-fabric'
-				optionalDependency 'ftb-ranks-fabric'
-			}
-			changelog = ENV.CHANGELOG  // expected to exist if ENV.CURSEFORGE_KEY does
-			changelogType = 'markdown'
-		}
-	}
-}
-
 publishing {
 	publications {
 		mavenForge(MavenPublication) {
@@ -143,28 +118,4 @@ publishing {
 			from components.java
 		}
 	}
-
-	repositories {
-		if (ftbPublishing.ftbToken) {
-			maven {
-				url ftbPublishing.ftbURL
-				credentials {
-					username = ftbPublishing.ftbUser
-					password = ftbPublishing.ftbToken
-				}
-			}
-		}
-
-		if (ftbPublishing.sapsToken) {
-			maven {
-				url ftbPublishing.sapsURL
-				credentials {
-					username = ftbPublishing.sapsUser
-					password = ftbPublishing.sapsToken
-				}
-			}
-		}
-	}
 }
-
-rootProject.tasks.getByName("curseforgePublish").dependsOn tasks.getByName("curseforge")
