--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,9 +1,6 @@
 plugins {
 	id "com.github.johnrengelman.shadow" version "7.0.0"
-	id "com.matthewprenger.cursegradle" version "1.4.0"
 }
-
-def ENV = System.getenv()
 
 architectury {
 	platformSetupLoomIde()
@@ -36,7 +33,7 @@ artifacts {
 
 dependencies {
 	forge "net.minecraftforge:forge:${rootProject.minecraft_version}-${rootProject.forge_version}"
-	modApi "dev.architectury:architectury-forge:${rootProject.architectury_version}"
+	modApi "dev.architectury:architectury-forge:${rootProject.architectury_api_version}"
 
 	modImplementation("dev.ftb.mods:ftb-library-forge:${rootProject.ftb_library_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-teams-forge:${rootProject.ftb_teams_version}") { transitive = false }
@@ -58,7 +55,7 @@ processResources {
 
 	filesMatching("META-INF/mods.toml") {
 		expand "version": project.version,
-				"archversion": project.architectury_version,
+				"archversion": project.architectury_api_version,
 				"forgeversion": project.forge_version,
 				"forgeshortversion": project.forge_version.split("\\.")[0],
 				"mcversion": project.minecraft_version,
@@ -110,27 +107,6 @@ sourceSets.each {
 	it.java.destinationDirectory = dir
 }
 
-if (ENV.CURSEFORGE_KEY) {
-	curseforge {
-		apiKey = ENV.CURSEFORGE_KEY
-		project {
-			id = project.curseforge_id_forge
-			releaseType = ftbPublishing.relType
-			addGameVersion "Forge"
-			addGameVersion project.minecraft_version
-			mainArtifact(remapJar.archiveFile)
-			relations {
-				requiredDependency 'architectury-api'
-				requiredDependency 'ftb-library-forge'
-				requiredDependency 'ftb-teams-forge'
-				optionalDependency 'ftb-ranks-forge'
-			}
-			changelog = ENV.CHANGELOG  // expected to exist if ENV.CURSEFORGE_KEY does
-			changelogType = 'markdown'
-		}
-	}
-}
-
 publishing {
 	publications {
 		mavenForge(MavenPublication) {
@@ -139,28 +115,4 @@ publishing {
 			from components.java
 		}
 	}
-
-	repositories {
-		if (ftbPublishing.ftbToken) {
-			maven {
-				url ftbPublishing.ftbURL
-				credentials {
-					username = ftbPublishing.ftbUser
-					password = ftbPublishing.ftbToken
-				}
-			}
-		}
-
-		if (ftbPublishing.sapsToken) {
-			maven {
-				url ftbPublishing.sapsURL
-				credentials {
-					username = ftbPublishing.sapsUser
-					password = ftbPublishing.sapsToken
-				}
-			}
-		}
-	}
 }
-
-rootProject.tasks.getByName("curseforgePublish").dependsOn tasks.getByName("curseforge")
