--- a/gradle.properties
+++ b/gradle.properties
@@ -4,22 +4,25 @@ org.gradle.daemon=false
 # Mod
 mod_id=ftbchunks
 archives_base_name=ftb-chunks
+readable_name=FTB Chunks
 maven_group=dev.ftb.mods
-mod_version=2006.1.1
 mod_author=FTB Team
 
-minecraft_version=1.20.6
+mod_version=2100.1.0
+minecraft_version=1.21
 
 # Deps
-forge_version=50.0.9
-neoforge_version=20.6.100-beta
-neoforge_loader_version=1
-fabric_loader_version=0.15.10
-fabric_api_version=0.99.0+1.20.6
-architectury_version=12.1.3
+#forge_version=50.0.9
+neoforge_version=21.0.10-beta
 
-ftb_library_version=2006.1.1
-ftb_teams_version=2006.1.0
+# https://maven.neoforged.net/#/releases/net/neoforged/fancymodloader/loader
+neoforge_loader_version=4
+fabric_loader_version=0.15.11
+fabric_api_version=0.100.1+1.21
+architectury_api_version=13.0.1
+
+ftb_library_version=2100.1.0-SNAPSHOT
+ftb_teams_version=2100.1.0-SNAPSHOT
 
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
