--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -1,9 +1,6 @@
 plugins {
 	id "com.github.johnrengelman.shadow" version "7.0.0"
-	id "com.matthewprenger.cursegradle" version "1.4.0"
 }
-
-def ENV = System.getenv()
 
 architectury {
 	platformSetupLoomIde()
@@ -36,7 +33,7 @@ repositories {
 
 dependencies {
 	neoForge "net.neoforged:neoforge:${rootProject.neoforge_version}"
-	modApi "dev.architectury:architectury-neoforge:${rootProject.architectury_version}"
+	modApi "dev.architectury:architectury-neoforge:${rootProject.architectury_api_version}"
 
 	modImplementation("dev.ftb.mods:ftb-library-neoforge:${rootProject.ftb_library_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-teams-neoforge:${rootProject.ftb_teams_version}") { transitive = false }
@@ -58,7 +55,7 @@ processResources {
 
 	filesMatching("META-INF/neoforge.mods.toml") {
 		expand "version": project.version,
-				"archversion": project.architectury_version,
+				"archversion": project.architectury_api_version,
 				"neoforgeversion": project.neoforge_version,
 				"neoforgeloaderversion": project.neoforge_loader_version,
 				"mcversion": project.minecraft_version,
@@ -104,27 +101,6 @@ components.java {
 	}
 }
 
-if (ENV.CURSEFORGE_KEY) {
-	curseforge {
-		apiKey = ENV.CURSEFORGE_KEY
-		project {
-			id = project.curseforge_id_forge
-			releaseType = ftbPublishing.relType
-			addGameVersion "NeoForge"
-			addGameVersion project.minecraft_version
-			mainArtifact(remapJar.archiveFile)
-			relations {
-				requiredDependency 'architectury-api'
-				requiredDependency 'ftb-library-forge'
-				requiredDependency 'ftb-teams-forge'
-				optionalDependency 'ftb-ranks-forge'
-			}
-			changelog = ENV.CHANGELOG  // expected to exist if ENV.CURSEFORGE_KEY does
-			changelogType = 'markdown'
-		}
-	}
-}
-
 publishing {
 	publications {
 		mavenForge(MavenPublication) {
@@ -133,28 +109,4 @@ publishing {
 			from components.java
 		}
 	}
-
-	repositories {
-		if (ftbPublishing.ftbToken) {
-			maven {
-				url ftbPublishing.ftbURL
-				credentials {
-					username = ftbPublishing.ftbUser
-					password = ftbPublishing.ftbToken
-				}
-			}
-		}
-
-		if (ftbPublishing.sapsToken) {
-			maven {
-				url ftbPublishing.sapsURL
-				credentials {
-					username = ftbPublishing.sapsUser
-					password = ftbPublishing.sapsToken
-				}
-			}
-		}
-	}
 }
-
-rootProject.tasks.getByName("curseforgePublish").dependsOn tasks.getByName("curseforge")
