--- a/gradle.properties
+++ b/gradle.properties
@@ -21,8 +21,8 @@ fabric_loader_version=0.15.11
 fabric_api_version=0.100.1+1.21
 architectury_api_version=13.0.1
 
-ftb_library_version=2100.1.0-SNAPSHOT
-ftb_teams_version=2100.1.0-SNAPSHOT
+ftb_library_version=2100.1.0
+ftb_teams_version=2100.1.0
 
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
