--- a/gradle.properties
+++ b/gradle.properties
@@ -13,15 +13,15 @@ minecraft_version=1.21
 
 # Deps
 #forge_version=50.0.9
-neoforge_version=21.0.14-beta
+neoforge_version=21.0.109-beta
 
 # https://maven.neoforged.net/#/releases/net/neoforged/fancymodloader/loader
 neoforge_loader_version=4
 fabric_loader_version=0.15.11
 fabric_api_version=0.100.1+1.21
-architectury_api_version=13.0.1
+architectury_api_version=13.0.2
 
-ftb_library_version=2100.1.0
+ftb_library_version=2100.1.3-SNAPSHOT
 ftb_teams_version=2100.1.0
 
 curseforge_id_forge=314906
