--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ fabric_loader_version=0.15.11
 fabric_api_version=0.100.1+1.21
 architectury_api_version=13.0.2
 
-ftb_library_version=2100.1.3-SNAPSHOT
+ftb_library_version=2100.1.3
 ftb_teams_version=2100.1.0
 
 curseforge_id_forge=314906
