--- a/gradle.properties
+++ b/gradle.properties
@@ -8,20 +8,20 @@ readable_name=FTB Chunks
 maven_group=dev.ftb.mods
 mod_author=FTB Team
 
-mod_version=2100.1.1
-minecraft_version=1.21
+mod_version=2101.1.0
+minecraft_version=1.21.1
 
 # Deps
 #forge_version=50.0.9
-neoforge_version=21.0.157
-neoforge_version_range=[21.0.143,)
+neoforge_version=21.1.9
+neoforge_version_range=[21.1.0,)
 neoforge_loader_version=4
 fabric_loader_version=0.15.11
 fabric_api_version=0.100.8+1.21
 fabric_api_version_range=>=0.100.1+1.21
 architectury_api_version=13.0.2
 
-ftb_library_version=2100.1.3
+ftb_library_version=2101.1.0-SNAPSHOT
 ftb_teams_version=2100.1.0
 
 curseforge_id_forge=314906
