--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ fabric_api_version_range=>=0.100.1+1.21
 architectury_api_version=13.0.2
 
 ftb_library_version=2101.1.0-SNAPSHOT
-ftb_teams_version=2100.1.0
+ftb_teams_version=2101.1.0-SNAPSHOT
 
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
