--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ fabric_api_version=0.102.1+1.21.1
 fabric_api_version_range=>=0.100.1+1.21
 architectury_api_version=13.0.6
 
-ftb_library_version=2101.1.0
+ftb_library_version=2101.1.2-SNAPSHOT
 ftb_teams_version=2101.1.0
 
 curseforge_id_forge=314906
