--- a/gradle.properties
+++ b/gradle.properties
@@ -13,15 +13,15 @@ minecraft_version=1.21.1
 
 # Deps
 #forge_version=50.0.9
-neoforge_version=21.1.9
+neoforge_version=21.1.13
 neoforge_version_range=[21.1.0,)
 neoforge_loader_version=4
 fabric_loader_version=0.15.11
-fabric_api_version=0.100.8+1.21
+fabric_api_version=0.102.1+1.21.1
 fabric_api_version_range=>=0.100.1+1.21
-architectury_api_version=13.0.2
+architectury_api_version=13.0.6
 
-ftb_library_version=2101.1.0
+ftb_library_version=2101.1.2-SNAPSHOT
 ftb_teams_version=2101.1.0
 
 curseforge_id_forge=314906
