More work on entity icons config

--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,20 @@ subprojects {
 		silentMojangMappingsLicense()
 	}
 
+	repositories {
+		maven {
+			name = 'ParchmentMC'
+			url = 'https://maven.parchmentmc.org'
+		}
+	}
+
 	dependencies {
 		minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
-		mappings loom.officialMojangMappings()
+		mappings loom.layered() {
+			officialMojangMappings()
+			parchment("org.parchmentmc.data:parchment-1.21:2024.07.28@zip")
+		}
+
 	}
 }
 
