--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,10 @@ pluginManagement {
 	repositories {
 		maven { url "https://maven.architectury.dev/" }
 		maven { url "https://maven.creeperhost.net/" }
+		maven {
+			name = 'ParchmentMC'
+			url = 'https://maven.parchmentmc.org'
+		}
 		gradlePluginPortal()
 	}
 }
