--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,13 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
-
 # Mod
 mod_id=ftbchunks
 archives_base_name=ftb-chunks
 readable_name=FTB Chunks
 maven_group=dev.ftb.mods
 mod_author=FTB Team
-
 mod_version=2101.1.1
 minecraft_version=1.21.1
-
 # Deps
 #forge_version=50.0.9
 neoforge_version=21.1.9
@@ -20,10 +17,8 @@ fabric_loader_version=0.16.0
 fabric_api_version=0.102.1+1.21.1
 fabric_api_version_range=>=0.100.1+1.21
 architectury_api_version=13.0.6
-
-ftb_library_version=2101.1.2-SNAPSHOT
+ftb_library_version=2101.1.2
 ftb_teams_version=2101.1.0
-
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
 
