fix: ensure CF publishing gets the changelog

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -118,7 +118,7 @@ if (ENV.CURSEFORGE_KEY) {
 				requiredDependency 'ftb-teams-forge'
 				optionalDependency 'ftb-ranks-forge'
 			}
-			changelog = ENV.CHANGELOG  // expected to exist if ENV.CURSEFORGE_KEY does
+			changelog = createChangelog(project)
 			changelogType = 'markdown'
 		}
 	}
