--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -129,7 +129,7 @@ if (ENV.CURSEFORGE_KEY) {
 				requiredDependency 'ftb-teams-fabric'
 				optionalDependency 'ftb-ranks-fabric'
 			}
-			changelog = ENV.CHANGELOG  // expected to exist if ENV.CURSEFORGE_KEY does
+			changelog = createChangelog(project)
 			changelogType = 'markdown'
 		}
 	}
