feat: add claim protection for piston moving
* Can be disabled in server config ('piston_protection' setting)
* When enabled, blocks can only be pushed/destroyed by a piston if:
  * The moved blocks will all end up in a chunk owned by the same
    team as the piston base's chunk, or
  * The moved blocks will all end up in an unclaimed chunk, or in a
    chunk that allows public "edit block" access

https://github.com/FTBTeam/FTB-Mods-Issues/issues/1393

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 	forge "net.minecraftforge:forge:${rootProject.minecraft_version}-${rootProject.forge_version}"
 	modApi "dev.architectury:architectury-forge:${rootProject.architectury_version}"
 
+	implementation(include("io.github.llamalad7:mixinextras-forge:0.4.1"))
+
 	modImplementation("dev.ftb.mods:ftb-library-forge:${rootProject.ftb_library_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-teams-forge:${rootProject.ftb_teams_version}") { transitive = false }
 
