--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,6 +4,8 @@ dependencies {
 
 	modImplementation("dev.ftb.mods:ftb-library:${rootProject.ftb_library_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-teams:${rootProject.ftb_teams_version}") { transitive = false }
+
+	compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.4.1"))
 }
 
 def ENV = System.getenv()
