config that prevents ops from seeing all nearby players on the minimap

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -13,6 +13,7 @@ Mapping, chunk claim protection and chunk loading all in one!
 '''
 # logoFile="logo.png"
 license = "All Rights Reserved"
+displayTest = "MATCH_VERSION"
 
 [[dependencies.ftbchunks]]
 modId = "forge"
