--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -120,7 +120,7 @@ if (ENV.CURSEFORGE_KEY) {
 				optionalDependency 'ftb-ranks-fabric'
 				optionalDependency 'ftb-xmod-compat'
 			}
-			changelog = getGitChangelog
+			changelog = createChangelog(project)
 			changelogType = 'markdown'
 		}
 	}
